# QA

./: .clang-format  .clangd  .clangd~  .gitignore  .tmux.conf  CMakeLists.txt  Makefile  MakefileTemplate  TemplateMakefile  compile.sh  config.yaml  config_hist_read_5.yaml  copyfake.sh  delete_commit.sh  get_pdf.sh  include  indexing.py  kit  update.sh
.qwen/: settings.json
draw/event/: Comparison_Mult_basicTrigger_AllTrigger.cpp  Comparison_Mult_basicTrigger_AllTrigger.sh  Comparison_mb_dqfilter.cpp  Comparison_mb_dqfilter.sh  MultCalibration.cpp  MultCalibration.sh  MultCalibrationResult.cpp  MultCalibrationResult.sh  MultPileupCut.cpp  MultPileupCut.sh  MultREFRaw.cpp  MultREFRaw.sh
draw/event/RCT_flag/: CbtFlag.cpp
draw/event/grouping/: Grouping_24pass1_DiElectron.cpp  Grouping_24pass1_DiElectron.sh  Grouping_24pass1_RCT.cpp  cluster1_985  cluster1_rct1  cluster2_951  (+10 more)
draw/event_jpsi/: AssoYieldEtagap.cpp  AssoYieldEtagapRoughPt.cpp  AssoYieldEtagap_templateFit.cpp  CorrelationQA.cpp  NJpsiCandidatePerEvent.cpp  NJpsiCandidatePerEvent.sh  config.yaml
draw/event_track/: AssoYieldEtagap.cpp  AssoYieldEtagap_templateFit.cpp  AssoYieldSchematic.cpp  config.yaml
draw/track/: TrackInfoMC.cpp  TrackInfoMC.sh
input/: .config_rsync  .config_rsync.swp
macro/event/: .MultRaw.cpp.swp  MultCalib.cpp  MultCalib_flowVec.cpp  MultPileupCut.cpp  MultQA_AllCut.cpp  MultQA_TPC.cpp  MultREF.cpp  MultREFRaw.cpp  MultRaw.cpp  MultRaw_flowVec.cpp
macro/event_jpsi/: EstimateJpsiAssoMEPoiEffFillTime.cpp  EventMixingJpsiAsso.cpp  EventMixingJpsiAssoPair.cpp  EventMixingJpsiAssoPair_rct.cpp  EventMixingJpsiAsso_v2.cpp  JpsiAsso.cpp  JpsiAssoPair.cpp  JpsiAssoPair_rct.cpp  JpsiAsso_BS.cpp  JpsiAsso_me_poi_eff.cpp  JpsiAsso_raw_poi_eff.cpp  JpsiAsso_raw_poi_eff.py  MixEventReading.cpp  NJpsiCandidatePerEvent.cpp  ReadPair.py  ReadPair2.py  ReadPairME_poi.py  ReadPairME_poi_eff.py  ReadPairMix.py  ReadPairSE_poi.py  ReadPairSE_poi_eff.py  ReadingPair.cpp
macro/event_track/: EventMixingRef.cpp  EventMixingRefPair.cpp  EventMixingRef_debug.cpp  MixEventReadingRef.cpp  ReadPair.py  ReadPair2.py  ReadPairME_ref.py  ReadPairMix.py  ReadPairMix2.py  ReadPairSE_ref.py  ReadingPair.cpp  RefPair_BS.cpp  RefPair_rct.cpp  Ref_BS.cpp
macro/jpsi/: JpsiQA.cpp  ReadJpsi.cpp  ReadJpsi.py
macro/track/: Efficiency.cpp  NonUniformCheck.cpp  Phi.cpp
opt/: EventData.cxx  EventData.h  LinkDef.h  MixJpsiAsso.h
process/event/: Grouping.cpp  Grouping24_RCT.cpp  Grouping_24pass1_DiElectron.sh  Trigger_Mult.cpp
process/event_jpsi/: AssoYeild.cpp  AssoYeildGroupQA.cpp  AssoYeildGroupQAEtaGap.cpp  AssoYeildQA.cpp  AssoYeildQAFast.cpp  NJpsiCandidatePerEvent.cpp  V2Fit.cpp
process/event_track/: AssoYeildEtagap.cpp  AssoYeildProj.cpp  BS_merge.cpp  v2_ref.cpp  v2_ref_templateFit.cpp
process/jpsi/: JpsiFitPt.cpp  JpsiFitPtMult.cpp  JpsiFit_Example.cpp
process/track/: EfficiencyHist.cpp  EfficiencyHist.py  TrackInfoMC.cpp
task/LHC24pass1_DiElectron/: MultiTask.sh
temp_test/: scheme_fitter_modified.cpp
(+147 files in other folders)
